tests/errors/surf_cont_06.ki
# Dict.pop of a missing key (no default)
var d = {}
discard d.pop("k")
